--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@hapi/joi-date": "^2.0.1",
     "@sendgrid/mail": "^7.1.0",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
