rutas de productos+reactivar usuario+ recuperar password

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "picsfy",
   "version": "1.0.0",
-  "description": ",-.----.                                                          \\    /  \\     ,---,  ,----..    .--.--.       ,---,.              |   :    \\ ,`--.' | /   /   \\  /  /    '.   ,'  .' |       ,---,  |   |  .\\ :|   :  :|   :     :|  :  /`. / ,---.'   |      /_ ./|  .   :  |: |:   |  '.   |  ;. /;  |  |--`  |   |   .',---, |  ' :  |   |   \\ :|   :  |.   ; /--` |  :  ;_    :   :  : /___/ \\.  : |  |   : .   /'   '  ;;   | ;     \\  \\    `. :   |  |-,.  \\  \\ ,' '  ;   | |`-' |   |  ||   : |      `----.   \\|   :  ;/| \\  ;  `  ,'  |   | ;    '   :  ;.   | '___   __ \\  \\  ||   |   .'  \\  \\    '   :   ' |    |   |  ''   ; : .'| /  /`--'  /'   :  '     '  \\   |   :   : :    '   :  |'   | '/  :'--'.     / |   |  |      \\  ;  ;   |   | :    ;   |.' |   :    /   `--'---'  |   :  \\       :  \\  \\  `---'.|    '---'    \\   \\ .'              |   | ,'        \\  ' ;    `---`              `---`                `----'           `--`",
+  "description": "Activos fotográficos",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
