--- a/Frontend/Front/package.json
+++ b/Frontend/Front/package.json
@@ -27,6 +27,7 @@
     "uuid": "^8.1.0",
     "vue": "^2.6.11",
     "vue-headful": "^2.1.0",
+    "vue-js-modal": "^2.0.0-rc.3",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
