--- a/Frontend/Front/package.json
+++ b/Frontend/Front/package.json
@@ -28,6 +28,7 @@
     "vue": "^2.6.11",
     "vue-headful": "^2.1.0",
     "vue-js-modal": "^2.0.0-rc.3",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
