--- a/Frontend/Front/package.json
+++ b/Frontend/Front/package.json
@@ -29,7 +29,8 @@
     "vue-headful": "^2.1.0",
     "vue-js-modal": "^2.0.0-rc.3",
     "vue-moment": "^4.1.0",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vue-star-rating": "^1.6.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
