--- a/Frontend/Front/package.json
+++ b/Frontend/Front/package.json
@@ -26,6 +26,7 @@
     "sweetalert2": "^9.15.1",
     "uuid": "^8.1.0",
     "vue": "^2.6.11",
+    "vue-carousel-3d": "^0.2.0",
     "vue-headful": "^2.1.0",
     "vue-js-modal": "^2.0.0-rc.3",
     "vue-moment": "^4.1.0",
